# school-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app-task-def.json  lightning.md  pyproject.toml  requirements.txt  streamlit_app.py
aws/: school-rag-task-definition.template.json  task-execution-secrets-policy.json  task-execution-secrets-policy.template.json
docs/: LOCAL_DEPLOYMENT_AND_GMAIL_GUIDE.md
scripts/: docker-entrypoint.sh  gmail_to_qdrant.py  ingest_folder.py
src/rag_app/: __init__.py  api.py  config.py  gmail_ingestion.py  ingestion.py  local_embeddings.py  meshapi_llm.py  models.py  qdrant_store.py  query.py  usage.py
src/rag_app_demo.egg-info/: PKG-INFO  SOURCES.txt
