[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-app-demo"
version = "0.1.0"
description = "End-to-end RAG demo with FastAPI, Streamlit, LlamaIndex, and Qdrant Cloud."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

